# go-embedeverything

./: .gitignore  README.md  go.mod  go.sum  main.go  output.txt
.github/workflows/: build.yml  rust.yml
cmd/: serve.go
embed_anything_binding/: Cargo.toml
embed_anything_binding/src/: lib.rs
pkg/embedder/: embedder.go  embedder_test.go  flags_darwin.go  flags_linux.go
scripts/: compile_rust_linux.sh  compile_rust_mac.sh  cross_compile_rust.sh  download_lib.sh
