[package]
name = "embed_anything_binding"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[features]
default = []
metal = ["embed_anything/metal"]
cuda = ["embed_anything/cuda"]
mkl = ["embed_anything/mkl"]

[dependencies]
anyhow = "1.0.100"
embed_anything = { version = "0.6.5", features = ["ort"] }
libc = "0.2.178"
tokio = { version = "1.48.0", features = ["rt", "macros", "rt-multi-thread"] }
